# attack-defense-sim-platform

./: ReadMe.md  ReadMe_new.md  use_gui.sh
catkin_ws/: battle.sh  kill.sh  reset.sh  start_platform.sh  start_platform_6vs6.sh
catkin_ws/src/bullet_control/: CMakeLists.txt
catkin_ws/src/hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch
catkin_ws/src/sim_platform_pysdk/: planA1.txt  planB1.txt
catkin_ws/src/sim_platform_pysdk/launch/: start_computer_and_your_code.launch
catkin_ws/src/sim_platform_pysdk/src/common/: obstacles.py
catkin_ws/src/sim_platform_pysdk/src/computer/: AI.py  computer.py  computer_A.py  computer_B.py  computer_interface.py  mymath.py
catkin_ws/src/sim_platform_pysdk/src/player/: example.py  player.py  player_interface.py
gui_executor/: CMakeLists.txt  main.cpp
install_judge_system/: 10_judge_system_msg_tf_ros_kinetic.list  install.sh  load_custom_msgs_to_ros_env.sh  ros-kinetic-judge-system-latest-0xenial_amd64.deb  ros-kinetic-judge-system-latest_0xenial_amd64.deb  ros-kinetic-judge-system-msgs_0.0.0-0xenial_amd64.deb  ros-kinetic-judge-system_0.0.0-0xenial_amd64.deb  rosdep.yaml  uninstall.sh
